# ScreenGuard

./: .gitignore  README.md  RELEASE_README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/screenguard/: __init__.py  __main__.py  main.py
src/screenguard/core/: __init__.py  base.py  events.py  settings.py
src/screenguard/detectors/: __init__.py  face_detector.py  face_recognizer.py
src/screenguard/monitors/: __init__.py  activity_monitor.py
src/screenguard/platform/: __init__.py  screen_locker.py
src/screenguard/ui/: __init__.py  settings_window.py  tray.py  warning_overlay.py
tests/: test_events.py  test_settings.py
